  growing too large.
* Use the "Don't show these messages again" checkbox to switch the checkboxes
  for the individual messages. Set the button inconsistent if the states are not
  all the same.
* Fix warning message about pdftk (again) by making sure that user-defined tmp
  directory is available in time.
* Improve responsiveness with OCR output (again)
* Update to Hungarian translation (thanks to csola)


2.6.4 (06.02.2020):

* Limit the number of pages to scan when switching between scanning facing and
  reverse pages.
* Fix scan dialog if no devices found (again).
* Improve responsiveness with OCR output
* + 'Ignore duplex capabilities of scanner' preferences option. Closes feature
  request #109 (Retain 'Source Document' options on 'Scan Document' dialog)
* Fix running post-save hook on filenames with UTF-8.
  Closes bug #341 (Wrong character encoding at post-save hook)
* Fixed frequent layout/output-pages mismatch in unpaper dialog
* Don't allow dialog offering to switch from Facing to Reverse after scanning
  double-sided pages to block scanner thread.
* Update to Czech translation (thanks to Pavel Borecki)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Swedish translation (thanks to Jonatan Nyberg)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.6.3 (06.01.2020):

* Fallback to core PDF font if requested font cannot be loaded.
  Closes bug #336 (Saving to PDF never ends if empty font is selected)
* Detect GraphicsMagick in ImageMagick compatibility mode.
* Set program name to RDN ID to allow Gnome to add gscan2pdf as a favorite.
* Fix importing metadata from PDFs when timezone has format like GMT-14
* Update to Hungarian translation (thanks to csola)


2.6.2 (27.11.2019):

* Fix importing UTF-8 in DjVu text layer
* Fix crash importing metadata
* Add compatibility with combination of scanimage frontend and SANE 1.0.28
  Closes bug #335 (Tests fail with sane-backends 1.0.28)